--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple telegram bot for SG public transport",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ryan Leong",
@@ -12,5 +13,8 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "lodash": "^4.17.10"
+  },
+  "engines": {
+    "node": "8.11.2"
   }
 }
