--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "heroku-logger": "^0.3.1",
     "lodash": "^4.17.10"
   },
   "engines": {
